fixed alignment in the images

--- a/assets/portfolio-styles.css
+++ b/assets/portfolio-styles.css
@@ -1,6 +1,15 @@
-
-
-.img {
+body {
+    background: #ebd5b3 !important
+  }
+  
+  img {
     height: 200px;
-    width: 200px
-}
+    width: 200px;
+    /* padding-top: 10px; */
+    margin: 20px 20px 20px 20px; 
+  }
+
+  #pad-top {
+      padding-top: 20px;
+  }
+  
